/*
 * Copyright 2021 Google LLC.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package yggdrasil_decision_forests.distribute.proto;

// Configuration for the distribution manager and workers.
message Config {
  // Identifier of the distribution strategy.
  //
  // If you use the C++ API, make sure to link the implementation if the
  // distribution strategy.
  optional string implementation_key = 1;

  // If true, the manager displays logs about the scheduled tasks.
  optional bool verbose = 5 [default = true];

  // Working directory accessible by the manager and workers.
  // Can be required by some distribution implementations (currently only
  // GRPCImp) and some algorithms.
  optional string working_directory = 6;

  // Implementation specific configuration.
  extensions 1000 to max;
}

// List of socket addresses.
message SocketAddresses {
  repeated SocketAddress addresses = 1;
  message SocketAddress {
    // Human readable IP notation e.g. 127.0.0.1.
    optional string ip = 1;
    optional int32 port = 2;
  }
}

message Bns {
  optional string prefix = 1;
  optional int32 num_workers = 2;
}
